[STORM-3900] Update introspection, allow System.setSecuritutyManager, remove unused imports